* Added STUDENT_USERNAME and STUDENT_PASSWORD placeholder to the student registration email * Fixed (potential) issue with student signup when FORCE_SSL_ADMIN is turned on * Fixed conflicts with Gravity Forms (admin and unit pages) * Fixed issue with multisite and granting and revoking instructor capabilities. * Fixed: Comments section no longer showing on course details page. * Fixed issue with 'Start Learning/Continue Learning' buttons not showing for courses set to manual enrollments. * Fixed: Instructor Capabilities On User Profile Page Not Saving When Granting/Revoking Capabilities * Fixed: coursepress_student_withdrawn hook is firing twice for a single withdrawal * Fixed issue with unique course and units slugs
git-svn-id: https://plugins.svn.wordpress.org/coursepress/trunk@1052704 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/themes/coursepress/style.css
+++ b/themes/coursepress/style.css
@@ -749,6 +749,7 @@ object {
 .site-main [class*="navigation"] {
     margin: 20px 0 1.5em;
     overflow: hidden;
+    float: right;
 }
 
 .site-main [class*="navigation"] ul {
@@ -2034,6 +2035,10 @@ label.full{
 
 a[rel="prev"] {
     float: left;
+}
+
+.nav-links a[rel="next"]{
+    margin-left: 20px;
 }
 
 /* VIDEO MODULE */
